update the workspace

--- a/AP3.1/.gitignore
+++ b/AP3.1/.gitignore
@@ -9,3 +9,8 @@
 /Generator.class
 /Draw.class
 /Statistics.class
+/HGenerator.class
+/VGenerator.class
+/Hgenerator.class
+/Vgenerator.class
+/APTest.class
