--- a/Assessment Files-20180315.zip_expanded/.gitignore
+++ b/Assessment Files-20180315.zip_expanded/.gitignore
@@ -4,3 +4,12 @@
 /LinkedStack.class
 /Stack.class
 /WordProcessor.class
+/Util.class
+/Pair.class
+/test.class
+/Box.class
+/WordProcessor2.class
+/BSTBage.class
+/BSTBag.class
+/BSTBag$Node.class
+/BSTBag$InOrderIterator.class
